[package]
name = "streaming_app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["mysql", "runtime-actix-native-tls"] }
actix-cors = "0.6"
tokio = { version = "1", features = ["sync"] }
